# symbolic

./: LICENSE  README.md  pyproject.toml
src/symbolic/: __init__.py  base.py  simplifier.py
test/: test.py
